[package]
name = "ttf-parser-wasm"
version = "0.1.0"
authors = ["Emil Sivervik <emil@sivervik.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize", "serde"] }
ttf-parser = "0.19.0"
js-sys = "0.3.61"
serde-wasm-bindgen = "0.5.0"
serde = { version = "1.0.160", features = ["derive"] }
#tsify = { version = "0.4.3", features = ["js"] }
tsify = { path = "../tsify", features = ["js"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
